# mct-pilzinkubator

./: .gitignore  README.md
Anforderungen/: Anforderungen.md  Mikrocontrollerprojekt.drawio
Implementation/: CMakeLists.txt  DataLogger.cpp  DataLogger.h  Greenhouse.cpp  Greenhouse.h  Helper.cpp  Helper.h  MinMaxController.cpp  MinMaxController.h  UartController.cpp  UartController.h  YAHAL_import.cmake  main.cpp
Implementation/Hardware/: Button.cpp  Button.h  HumiditySensor.cpp  HumiditySensor.h  IActor.h  ISensor.cpp  ISensor.h  MoistureSensor.cpp  MoistureSensor.h  OnOffSystem.cpp  OnOffSystem.h  SDCard.cpp  SDCard.h  TemperatureSensor.cpp  TemperatureSensor.h
Implementation/Sensors/: dht.cpp  dht.h
